<resources>
    <string name="app_name">Smart Recycle</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="google_maps_API_key">AIzaSyC-_UTo-gdgGh0og-wc06hJ9P6CeWQyozo</string>

    <string name="action_settings">Settings</string>
    <string name="bin_companies">Bin companies in your area</string>
    <string name="useful_links">Useful Links</string>
    <string name="benefits">Benefits of Recycling</string>
    <string name="not_recycle">What Not To Recycle</string>
    <string name="symbols">Recycling Symbols</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="header">What would you like to recycle?</string>
    <string name="aluminium_cans">Aluminium Cans</string>
    <string name="glass_bottles">Glass Bottles</string>
    <!--The strings below hold the web address that the app will navigate to-->
    <string name="RepakString"><a href="https://www.repak.ie">Repak</a></string>
    <string name="EPAString"><a href="https://www.epa.ie">EPA</a></string>
    <string name="Citizens"><a href="http://www.citizensinformation.ie">Citizens Information</a></string>
    <string name="WeeeString"><a href="http://www.weeeireland.ie">Weee Ireland</a></string>
    <string name="show_all_centres">Show all Recycling Centres</string>
    <string name="show_all">List of Recycling Facilities</string>
    <string name="title_activity_maps">Map</string>
    <string name="benefits_landfill">Lessens the need for landfills</string>
    <string name="benefits_pollution">Reduces pollution by reducing the need to collect new raw materials</string>
    <string name="benefits_resources">Conserves resources such as timber, water and minerals</string>
    <string name="benefits_energy">Conserves energy</string>
    <string name="benefits_deforestation">Reduces deforestation</string>

    <string name="benefits_water">Maintains ground water quality</string>
    <string name="benefits_sustainable">Ensures a sustainable future</string>
    <string name="benefits_jobs">Creates jobs in the recycling industry</string>
    <string name="thorntons">Thornton\'s Recycling \n(01)623 5133</string>
    <!--strings below hold the details for bin companies and a separate string with each web address-->
    <string name="thorntonsWeb"><a href="https://www.thorntons-recycling.ie">Visit Website</a></string>
    <string name="panda">\nPanda Waste Management \n1890 626 262</string>
    <string name="pandaWeb"><a href="https://www.panda.ie">Visit Website</a></string>
    <string name="citybin">\nThe City Bin Co \n(091)787 800</string>
    <string name="citybinWeb"><a href="https://www.citybin.com/cms/">Visit Website</a></string>
    <string name="greyhound">\nGreyhound Household Recycling \n1890 989 998</string>
    <string name="greyhoundWeb"><a href="https://greyhound.ie">Visit Website</a></string>

    <!--strings below hold the text for the about page-->
    <string name="about_header">Smart Recycle is brought to you by:</string>
    <string name="about_names">\n\t Lorraine McGonigle \n\n\t James Basquill \n\n\t Shaunagh McGee \n\n\t Claudine Callaghan</string>
    <string name="about_copyright">Copyright \u00A9 2018 Smart Recycle, All rights reserved. </string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
