<?xml version="1.0" encoding="utf-8"?>
<!--created by Lorraine-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wherecycle.smartrecycle.BinCompaniesActivity">
<!-- layout for the bin companies activity. Displays text view, link to webpage and customised call button-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingBottom="6dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:text="@string/thorntons"/>
            <TextView
                android:id="@+id/thorntons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thorntonsWeb"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="20dp"/>
            <!--The button takes its shape from button_shape.xml-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Call"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/button_shape"
                android:id="@+id/callThorntons"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:text="@string/panda"/>
            <TextView
                android:id="@+id/panda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pandaWeb"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="20dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Call"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/button_shape"
                android:id="@+id/callPanda" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:text="@string/citybin"/>
            <TextView
                android:id="@+id/citybin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/citybinWeb"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="20dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Call"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/button_shape"
                android:id="@+id/callCitybin"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:text="@string/greyhound"/>
            <TextView
                android:id="@+id/greyhound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/greyhoundWeb"
                android:textColorLink="@color/colorPrimaryDark"
                android:textSize="20dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Call"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:background="@drawable/button_shape"
                android:id="@+id/callGreyhound"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
